# streaming_calc_rust

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
