[package]
name = "streaming_calc_rust"
version = "0.1.0"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/sycured/streaming_calc_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"

[profile.release]
lto = true

[profile.dev]
opt-level = 3
lto = true